refactor: update cart item quantity type and improve logging in CartServiceImpl